--- a/style.css
+++ b/style.css
@@ -10,32 +10,38 @@
 
 .outer{
     /* background: var(--bordercolor); */
-    height: 650px;
-    width: 650px;
+    height: 750px;
+    width: 750px;
     border: 1px solid red;
     margin: 0px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* align-items: center; */
 }
 
 .box_row{
-    height: 250px;
-    width: 650px;
+    height: 300px;
+    width: 750px;
+    display: flex;
+    flex-wrap: wrap;
     /* background: blue; */
-    float: left;
 }
 
 .box{
-    height: 200px;
-    width: 200px;
+    height: 300px;
+    width: 300px;
+    float: left;
     /* background: red; */
     /* border: 60px solid red; */
     
 }
 .border_red{
-    border: 35px solid red;
+    border: 60px solid red;
 }
 
 .border_green{
-    border: 35px solid green;
+    border: 60px solid rgb(5, 158, 5);
 }
 .border_blue{
     border: 60px solid blue;
@@ -58,11 +64,42 @@
 
 #right_red{
     position: absolute;
-    left: 445px;
+    left: 395px;
     top: 36px;
 }
 #right_red1{
     position: absolute;
-    left: 445px;
+    left: 395px;
     top: 96px;
+}
+
+.v_lad{
+    height: 300px;
+    width: 150px;
+    /* float: left; */
+    /* background: red; */
+    /* display: flex;
+    flex-direction: column; */
+}
+
+.v_lad_row{
+    height: 50px;
+    width: 150px;
+    border: 1px solid red;
+    /* background: #ff8596; */
+}
+.cell{
+    height: 50px;
+     width:  50px;
+    /* float: left; */
+    box-sizing: border-box;
+    border: 1px solid black;
+}
+
+.red{
+    background: red;
+}
+
+.green{
+    background: rgb(5, 158, 5);
 }
